base/affine-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: affine-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: affine-nodeport
            port:
              number: 80
