base/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
 rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-world-nodeport
            port:
              number: 80
      - pathType: Prefix
        path: "/paperless"
        backend:
          service:
            name: paperless-ngx
            port:
              number: 8000
